Only set sm_70 when CUDA 9 is installed.

--- a/CUDA/CMakeLists.txt
+++ b/CUDA/CMakeLists.txt
@@ -88,21 +88,38 @@ endif(GPU_DOUBLE_PREC)
 
 SET(FERMI_GPU OFF CACHE BOOL "Enable build for (old) Fermi architectures (Compute capability 2.0)")
 
+
+IF(FERMI_GPU)
+  set(MY_NVCC_FLAGS -gencode arch=compute_20,code=sm_20)
+  list(APPEND MY_NVCC_FLAGS -gencode arch=compute_30,code=sm_30)
+  list(APPEND MY_NVCC_FLAGS -gencode arch=compute_50,code=sm_50)
+  list(APPEND MY_NVCC_FLAGS -gencode=arch=compute_52,code=sm_52)
+  list(APPEND MY_NVCC_FLAGS -gencode=arch=compute_52,code=compute_52)
+ELSE(FERMI_GPU)
+  set(MY_NVCC_FLAGS -arch=sm_30 -gencode arch=compute_30,code=sm_30)
+  list(APPEND MY_NVCC_FLAGS -gencode arch=compute_50,code=sm_50)
+  list(APPEND MY_NVCC_FLAGS -gencode=arch=compute_52,code=sm_52)
+  list(APPEND MY_NVCC_FLAGS -gencode=arch=compute_52,code=compute_52)
+
+  if(${CUDA_VERSION_MAJOR} STRGREATER "7")
+    message("add CUDA 8 flags: Current version: ${CUDA_VERSION}")
+    list(APPEND MY_NVCC_FLAGS -gencode=arch=compute_60,code=sm_60)
+    list(APPEND MY_NVCC_FLAGS -gencode=arch=compute_61,code=sm_61)
+    list(APPEND MY_NVCC_FLAGS -gencode=arch=compute_61,code=compute_61)
+  endif()
+
+  if(${CUDA_VERSION_MAJOR} STRGREATER "8")
+    message("add CUDA 9 flags: Current version: ${CUDA_VERSION}")
+    list(APPEND MY_NVCC_FLAGS -gencode=arch=compute_70,code=sm_70)
+  endif()
+ENDIF(FERMI_GPU)
+
 IF(CMAKE_BUILD_TYPE MATCHES Debug)
   MESSAGE("debug mode")
-  if(FERMI_GPU)
-    list(APPEND CUDA_NVCC_FLAGS -gencode arch=compute_20,code=sm_20 -gencode arch=compute_30,code=sm_30 -gencode arch=compute_50,code=sm_50 --ptxas-options=-v)
-  else(FERMI_GPU)
-    list(APPEND CUDA_NVCC_FLAGS --ptxas-options=-v -arch=sm_30 -gencode=arch=compute_30,code=sm_30 -gencode=arch=compute_50,code=sm_50 -gencode=arch=compute_52,code=sm_52 -gencode=arch=compute_60,code=sm_60 -gencode=arch=compute_61,code=sm_61 -gencode=arch=compute_62,code=sm_62 -gencode=arch=compute_70,code=sm_70 -gencode=arch=compute_70,code=compute_70)
-  endif(FERMI_GPU)
-
+  list(APPEND CUDA_NVCC_FLAGS ${MY_NVCC_FLAGS} --ptxas-options=-v)
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -g")
 ELSE(CMAKE_BUILD_TYPE)
-  if(FERMI_GPU)
-    list(APPEND CUDA_NVCC_FLAGS -gencode arch=compute_20,code=sm_20 -gencode arch=compute_30,code=sm_30 -gencode arch=compute_50,code=sm_50)
-  else(FERMI_GPU)
-    list(APPEND CUDA_NVCC_FLAGS -arch=sm_30 -gencode=arch=compute_30,code=sm_30 -gencode=arch=compute_50,code=sm_50 -gencode=arch=compute_52,code=sm_52 -gencode=arch=compute_60,code=sm_60 -gencode=arch=compute_61,code=sm_61 -gencode=arch=compute_62,code=sm_62 -gencode=arch=compute_70,code=sm_70 -gencode=arch=compute_70,code=compute_70)
-  endif(FERMI_GPU)
+  list(APPEND CUDA_NVCC_FLAGS ${MY_NVCC_FLAGS})
 ENDIF()
 
 MESSAGE(STATUS "setting NVCC FLAGS to: ${CUDA_NVCC_FLAGS}")
