--- a/CUDA/CMakeLists.txt
+++ b/CUDA/CMakeLists.txt
@@ -123,7 +123,7 @@ ENDIF(FERMI_GPU)
 IF(CMAKE_BUILD_TYPE MATCHES Debug)
   MESSAGE("debug mode")
   list(APPEND CUDA_NVCC_FLAGS ${MY_NVCC_FLAGS} --ptxas-options=-v)
-  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -g")
+  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -g -std=c++11")
 ELSE(CMAKE_BUILD_TYPE)
   list(APPEND CUDA_NVCC_FLAGS ${MY_NVCC_FLAGS})
 ENDIF()
