Working NUFFTOp python Bindings

--- a/CUDA/CMakeLists.txt
+++ b/CUDA/CMakeLists.txt
@@ -24,7 +24,7 @@ SET(MEX_EXPORT_DIR ${PROJECT_SOURCE_DIR}/../gpuNUFFT/@gpuNUFFT/private CACHE STR
 
 #Searching CUDA
 FIND_PACKAGE(CUDA REQUIRED)
-
+set(CMAKE_CXX_FLAGS "-std=c++11 -fPIC")
 #Enable Mex File Generation
 #Searching MATLAB
 SET(GEN_MEX_FILES ON CACHE BOOL "Enable generation of Matlab MEX files.")
