Link to python lib on Windows.

--- a/CUDA/src/gpu/python/CMakeLists.txt
+++ b/CUDA/src/gpu/python/CMakeLists.txt
@@ -11,5 +11,13 @@ include_directories(
 cuda_include_directories(${GPUNUFFT_INC_DIR})
 cuda_add_library(gpuNUFFT  ${GPU_CU_SOURCES}  ${GPU_GPUNUFFT_SOURCES} ${GPUNUFFT_SOURCES} ${GPUNUFFT_INCLUDE} gpuNUFFT_operator_python_factory.cpp SHARED)
 set_target_properties(gpuNUFFT PROPERTIES PREFIX "")
-TARGET_LINK_LIBRARIES(gpuNUFFT ${CUDA_LIBRARIES} ${GRID_LIB_ATM_NAME} ${GRID_LIB_NAME})
 
+if(WIN32)
+    MESSAGE("Pybind11 include dir ${PYBIND11_INCLUDE_DIR}")
+    MESSAGE("Python include dir ${PYTHON_INCLUDE_DIR}")
+    MESSAGE("Found ${PYTHON_LIBRARIES}")
+
+    TARGET_LINK_LIBRARIES(gpuNUFFT ${CUDA_LIBRARIES} ${GRID_LIB_ATM_NAME} ${GRID_LIB_NAME} ${PYTHON_LIBRARIES})
+elseif(UNIX)
+    TARGET_LINK_LIBRARIES(gpuNUFFT ${CUDA_LIBRARIES} ${GRID_LIB_ATM_NAME} ${GRID_LIB_NAME})
+endif(WIN32)
