Fix if conditions to use NVCC flags for Cuda 10 support

--- a/CUDA/CMakeLists.txt
+++ b/CUDA/CMakeLists.txt
@@ -107,19 +107,19 @@ ELSE(FERMI_GPU)
   list(APPEND MY_NVCC_FLAGS -gencode=arch=compute_52,code=sm_52)
   list(APPEND MY_NVCC_FLAGS -gencode=arch=compute_52,code=compute_52)
 
-  if(${CUDA_VERSION_MAJOR} STRGREATER "7")
+  if(${CUDA_VERSION_MAJOR} GREATER 7)
     message("add CUDA 8 flags: Current version: ${CUDA_VERSION}")
     list(APPEND MY_NVCC_FLAGS -gencode=arch=compute_60,code=sm_60)
     list(APPEND MY_NVCC_FLAGS -gencode=arch=compute_61,code=sm_61)
     list(APPEND MY_NVCC_FLAGS -gencode=arch=compute_61,code=compute_61)
   endif()
 
-  if(${CUDA_VERSION_MAJOR} STRGREATER "8")
+  if(${CUDA_VERSION_MAJOR} GREATER 8)
     message("add CUDA 9 flags: Current version: ${CUDA_VERSION}")
     list(APPEND MY_NVCC_FLAGS -gencode=arch=compute_70,code=sm_70)
   endif()
 
-  if(${CUDA_VERSION_MAJOR} STRGREATER "9")
+  if(${CUDA_VERSION_MAJOR} GREATER 9)
     message("add CUDA 10 flags: Current version: ${CUDA_VERSION}")
     list(APPEND MY_NVCC_FLAGS -gencode=arch=compute_75,code=sm_75)
   endif()
