Remove linking issues

--- a/CUDA/src/gpu/python/CMakeLists.txt
+++ b/CUDA/src/gpu/python/CMakeLists.txt
@@ -9,7 +9,7 @@ include_directories(
     ${PYTHON_INCLUDE_DIR}
     )
 cuda_include_directories(${GPUNUFFT_INC_DIR})
-cuda_add_library(gpuNUFFT  ${GPU_CU_SOURCES}  ${GPU_GPUNUFFT_SOURCES} ${GPUNUFFT_SOURCES} ${GPUNUFFT_INCLUDE} gpuNUFFT_operator_python_factory.cpp SHARED)
+cuda_add_library(gpuNUFFT  ${GPU_CU_SOURCES}  ${GPU_GPUNUFFT_SOURCES} ${GPUNUFFT_SOURCES} ${GPUNUFFT_INCLUDE} gpuNUFFT_operator_python_factory.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../atomic/atomic_gpuNUFFT.cu SHARED)
 set_target_properties(gpuNUFFT PROPERTIES PREFIX "")
 
 if(WIN32)
@@ -18,7 +18,9 @@ if(WIN32)
     MESSAGE("Found ${PYTHON_LIBRARIES}")
     set_target_properties(gpuNUFFT PROPERTIES SUFFIX ".pyd")
 
-    TARGET_LINK_LIBRARIES(gpuNUFFT ${CUDA_LIBRARIES} ${GRID_LIB_ATM_NAME} ${GRID_LIB_NAME} ${PYTHON_LIBRARIES})
+    TARGET_LINK_LIBRARIES(gpuNUFFT ${CUDA_LIBRARIES} ${GRID_LIB_ATM_NAME} ${PYTHON_LIBRARIES})
 elseif(UNIX)
-    TARGET_LINK_LIBRARIES(gpuNUFFT ${CUDA_LIBRARIES} ${GRID_LIB_ATM_NAME} ${GRID_LIB_NAME})
+    TARGET_LINK_LIBRARIES(gpuNUFFT ${CUDA_LIBRARIES})
 endif(WIN32)
+CUDA_ADD_CUFFT_TO_TARGET(gpuNUFFT)
+CUDA_ADD_CUBLAS_TO_TARGET(gpuNUFFT)
