Fix for memory type

--- a/CUDA/src/gpu/python/CMakeLists.txt
+++ b/CUDA/src/gpu/python/CMakeLists.txt
@@ -20,7 +20,7 @@ if(WIN32)
 
     TARGET_LINK_LIBRARIES(gpuNUFFT ${CUDA_LIBRARIES} ${GRID_LIB_ATM_NAME} ${PYTHON_LIBRARIES})
 elseif(UNIX)
-    TARGET_LINK_LIBRARIES(gpuNUFFT ${CUDA_LIBRARIES} cuda)
+    TARGET_LINK_LIBRARIES(gpuNUFFT ${CUDA_LIBRARIES})
 endif(WIN32)
 CUDA_ADD_CUFFT_TO_TARGET(gpuNUFFT)
 CUDA_ADD_CUBLAS_TO_TARGET(gpuNUFFT)
